# linear-algebra

./: .gitignore  CMakeLists.txt  README.md  grid.c  grid.h  main.c
.github/workflows/: ci.yaml
include/: grid.h  matrix2.h  settings.h  state.h
src/: grid.c  matrix2.c  state.c
web/: go.mod  main.go
web/resources/: index.html
